Enable building and resource loading for packages
Refactored resource loading to use classpath for status.json, invalid_token.json, and proxy.properties, enabling bundled resource access when files are not present on disk. Updated pom.xml to add build plugins and set Java 17 compatibility. Moved resource files to src/main/resources for proper packaging.